dist/1.0/bin/sample/retrieveUnpackaged/objects/AddressBook__c.object
<CustomObject>
    <description>Stores addresses for Ends</description>
    <fields>
        <fullName>A_End__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N20000001RffBEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apartment_No__c</fullName>
        <label>Apartment No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Block__c</fullName>
        <label>Building/Block</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Aaland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegowina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is default A End for Request Import</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSS_ID__c</fullName>
        <description>Stores ID of address in OSS.</description>
        <inlineHelpText>Stores ID of address in OSS.</inlineHelpText>
        <label>OSS ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_No__c</fullName>
        <label>Room No</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source Record Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_No__c</fullName>
        <label>Street No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>GTS PoP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner PoP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNI Node</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Address Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Address Entry</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address Book</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_OR_Customer_Name</fullName>
        <active>false</active>
        <description>Allows to fill only one of the fields - Account or Customer Name</description>
        <errorConditionFormula>Account__c != null  &amp;&amp;  Customer_Name__c != null</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>You can fill either Account OR Customer Name, not both of them</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_System_Adm_can_choose_true</fullName>
        <active>true</active>
        <description>You are not allowed to create / modify A End information</description>
        <errorConditionFormula>ISCHANGED(A_End__c) &amp;&amp; A_End__c = true &amp;&amp; $Profile.Name != &apos;System Administrator&apos;</errorConditionFormula>
        <errorDisplayField>A_End__c</errorDisplayField>
        <errorMessage>You are not allowed to modify A End flag.</errorMessage>
    </validationRules>
</CustomObject>